--- a/source/contributors/resources/hostapd.sccp.conf
+++ b/source/contributors/resources/hostapd.sccp.conf
@@ -60,9 +60,9 @@ dump_file=/tmp/hostapd.dump
 # configuration. The socket file will be named based on the interface name, so
 # multiple hostapd processes/interfaces can be run at the same time if more
 # than one interface is used.
-# /var/run/hostapd is the recommended directory for sockets and by default,
+# /run/hostapd is the recommended directory for sockets and by default,
 # hostapd_cli will use it when trying to connect with hostapd.
-ctrl_interface=/var/run/hostapd
+ctrl_interface=/run/hostapd
 
 # Access control for the control interface can be configured by setting the
 # directory to allow only members of a group to use sockets. This way, it is
@@ -884,7 +884,7 @@ wpa_pairwise=TKIP
 # text file that could be used, e.g., to populate the AP administration UI with
 # pending PIN requests. If the following variable is set, the PIN requests will
 # be written to the configured file.
-#wps_pin_requests=/var/run/hostapd_wps_pin_requests
+#wps_pin_requests=/run/hostapd_wps_pin_requests
 
 # Device Name
 # User-friendly description of device; up to 32 octets encoded in UTF-8
